--- a/final-mybatis/pom.xml
+++ b/final-mybatis/pom.xml
@@ -9,12 +9,11 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>final-context</artifactId>
+    <artifactId>final-mybatis</artifactId>
     <packaging>pom</packaging>
     <modules>
-        <module>final-context-exception</module>
-        <module>final-context-entity</module>
-        <module>final-context-result</module>
+        <module>final-mybatis-annotation</module>
+        <module>final-mybatis-plus</module>
     </modules>
 
 
