--- a/final-spring/pom.xml
+++ b/final-spring/pom.xml
@@ -9,12 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>final-context</artifactId>
+    <artifactId>final-spring</artifactId>
     <packaging>pom</packaging>
     <modules>
-        <module>final-context-exception</module>
-        <module>final-context-entity</module>
-        <module>final-context-result</module>
+        <module>final-spring-aop</module>
+        <module>final-spring-web</module>
+        <module>final-spring-expression</module>
     </modules>
 
 
