--- a/final-processor/pom.xml
+++ b/final-processor/pom.xml
@@ -9,21 +9,23 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>final-test</artifactId>
+    <artifactId>final-processor</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>cn.com.likly.finalframework</groupId>
-            <artifactId>final-spring-web-api</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <groupId>com.google.auto.service</groupId>
+            <artifactId>auto-service</artifactId>
+            <version>1.0-rc2</version>
+        </dependency>
+        <dependency>
+            <groupId>com.squareup</groupId>
+            <artifactId>javawriter</artifactId>
+            <version>2.5.1</version>
         </dependency>
         <dependency>
             <groupId>cn.com.likly.finalframework</groupId>
-            <artifactId>final-processor</artifactId>
+            <artifactId>final-data</artifactId>
             <version>0.0.1-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
-
-
 </project>
