--- a/final-spring/pom.xml
+++ b/final-spring/pom.xml
@@ -10,13 +10,16 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>final-spring</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>final-spring-aop</module>
-        <module>final-spring-web</module>
-        <module>final-spring-expression</module>
-        <module>final-spring-web-api</module>
-    </modules>
+    <packaging>jar</packaging>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.com.likly.finalframework</groupId>
+            <artifactId>final-data</artifactId>
+        </dependency>
+    </dependencies>
 </project>
