--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,12 @@
     <artifactId>final-framework</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <modules>
+        <module>final-util</module>
         <module>final-data</module>
         <module>final-mybatis</module>
-        <module>final-test</module>
         <module>final-spring</module>
-        <module>final-validation</module>
-        <module>final-util</module>
-        <module>final-processor</module>
+        <module>final-coding</module>
+        <module>final-test</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -29,6 +28,7 @@
 
     <properties>
         <final.version>0.0.1-SNAPSHOT</final.version>
+        <mybatis.version>3.4.6</mybatis.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
@@ -38,13 +38,20 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>1.18.0</version>
             <optional>true</optional>
             <scope>compile</scope>
         </dependency>
     </dependencies>
 
     <dependencyManagement>
+
         <dependencies>
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis</artifactId>
+                <version>${mybatis.version}</version>
+            </dependency>
             <dependency>
                 <groupId>cn.com.likly.finalframework</groupId>
                 <artifactId>final-util</artifactId>
@@ -57,8 +64,13 @@
             </dependency>
             <dependency>
                 <groupId>cn.com.likly.finalframework</groupId>
-                <artifactId>final-validation</artifactId>
+                <artifactId>final-coding</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.com.likly.finalframework</groupId>
+                <artifactId>final-spring</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -73,10 +85,7 @@
                     <target>8</target>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
+
         </plugins>
     </build>
 
