--- a/final-spring/pom.xml
+++ b/final-spring/pom.xml
@@ -18,8 +18,18 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+        <dependency>
             <groupId>cn.com.likly.finalframework</groupId>
             <artifactId>final-data</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>5.1.2</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
