--- a/final-test/pom.xml
+++ b/final-test/pom.xml
@@ -19,6 +19,11 @@
         </dependency>
         <dependency>
             <groupId>cn.com.likly.finalframework</groupId>
+            <artifactId>final-mybatis</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.com.likly.finalframework</groupId>
             <artifactId>final-util</artifactId>
         </dependency>
         <dependency>
