--- a/final-data-mybatis/pom.xml
+++ b/final-data-mybatis/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>final-mybatis</artifactId>
+    <artifactId>final-data-mybatis</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
