--- a/final-cache/pom.xml
+++ b/final-cache/pom.xml
@@ -17,8 +17,9 @@
             <artifactId>spring-boot-starter-aop</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
+            <groupId>cn.com.likly.finalframework</groupId>
+            <artifactId>final-redis</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>cn.com.likly.finalframework</groupId>
