--- a/final-test/pom.xml
+++ b/final-test/pom.xml
@@ -29,6 +29,10 @@
         </dependency>
         <dependency>
             <groupId>cn.com.likly.finalframework</groupId>
+            <artifactId>final-cache</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>cn.com.likly.finalframework</groupId>
             <artifactId>final-util</artifactId>
         </dependency>
         <dependency>
