--- a/final-test/src/main/resources/application.yml
+++ b/final-test/src/main/resources/application.yml
@@ -33,7 +33,7 @@ logging:
       com:
         likly:
           finalframework:
-            mybatis:
+            dao:
               mapper: debug
 server:
   port: 8080
