--- a/final-mybatis/pom.xml
+++ b/final-mybatis/pom.xml
@@ -34,6 +34,15 @@
         </dependency>
         <dependency>
             <groupId>cn.com.likly.finalframework</groupId>
+            <artifactId>final-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.9.7</version>
+        </dependency>
+        <dependency>
+            <groupId>cn.com.likly.finalframework</groupId>
             <artifactId>final-json</artifactId>
         </dependency>
         <dependency>
