--- a/final-test/pom.xml
+++ b/final-test/pom.xml
@@ -41,6 +41,11 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>cn.com.likly.finalframework</groupId>
+            <artifactId>final-logging</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
