--- a/final-mybatis/pom.xml
+++ b/final-mybatis/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>final-framework</artifactId>
-        <groupId>cn.com.likly.finalframework</groupId>
+        <groupId>com.ilikly.finalframework</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -29,15 +29,15 @@
             <version>1.2.3</version>
         </dependency>
         <dependency>
-            <groupId>cn.com.likly.finalframework</groupId>
+            <groupId>com.ilikly.finalframework</groupId>
             <artifactId>final-data</artifactId>
         </dependency>
         <dependency>
-            <groupId>cn.com.likly.finalframework</groupId>
+            <groupId>com.ilikly.finalframework</groupId>
             <artifactId>final-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>cn.com.likly.finalframework</groupId>
+            <groupId>com.ilikly.finalframework</groupId>
             <artifactId>final-coding</artifactId>
         </dependency>
         <dependency>
@@ -46,7 +46,7 @@
             <version>2.9.7</version>
         </dependency>
         <dependency>
-            <groupId>cn.com.likly.finalframework</groupId>
+            <groupId>com.ilikly.finalframework</groupId>
             <artifactId>final-json</artifactId>
         </dependency>
         <dependency>
