--- a/final-redis/pom.xml
+++ b/final-redis/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>final-framework</artifactId>
-        <groupId>cn.com.likly.finalframework</groupId>
+        <groupId>com.ilikly.finalframework</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -13,12 +13,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>cn.com.likly.finalframework</groupId>
+            <groupId>com.ilikly.finalframework</groupId>
             <artifactId>final-core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>cn.com.likly.finalframework</groupId>
+            <groupId>com.ilikly.finalframework</groupId>
             <artifactId>final-json</artifactId>
         </dependency>
         <dependency>
