--- a/final-test/pom.xml
+++ b/final-test/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>final-framework</artifactId>
-        <groupId>cn.com.likly.finalframework</groupId>
+        <groupId>com.ilikly.finalframework</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -13,36 +13,36 @@
 
     <dependencies>
         <dependency>
-            <groupId>cn.com.likly.finalframework</groupId>
+            <groupId>com.ilikly.finalframework</groupId>
             <artifactId>final-spring</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>cn.com.likly.finalframework</groupId>
+            <groupId>com.ilikly.finalframework</groupId>
             <artifactId>final-mybatis</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>cn.com.likly.finalframework</groupId>
+            <groupId>com.ilikly.finalframework</groupId>
             <artifactId>final-redis</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>cn.com.likly.finalframework</groupId>
+            <groupId>com.ilikly.finalframework</groupId>
             <artifactId>final-cache</artifactId>
         </dependency>
         <dependency>
-            <groupId>cn.com.likly.finalframework</groupId>
+            <groupId>com.ilikly.finalframework</groupId>
             <artifactId>final-util</artifactId>
         </dependency>
         <dependency>
-            <groupId>cn.com.likly.finalframework</groupId>
+            <groupId>com.ilikly.finalframework</groupId>
             <artifactId>final-coding</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>cn.com.likly.finalframework</groupId>
+            <groupId>com.ilikly.finalframework</groupId>
             <artifactId>final-logging</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
