--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>cn.com.likly.finalframework</groupId>
+    <groupId>com.ilikly.finalframework</groupId>
     <artifactId>final-framework</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <modules>
@@ -60,7 +60,7 @@
 
         <dependencies>
             <dependency>
-                <groupId>cn.com.likly.finalframework</groupId>
+                <groupId>com.ilikly.finalframework</groupId>
                 <artifactId>final-core</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -70,32 +70,32 @@
                 <version>${mybatis.version}</version>
             </dependency>
             <dependency>
-                <groupId>cn.com.likly.finalframework</groupId>
+                <groupId>com.ilikly.finalframework</groupId>
                 <artifactId>final-util</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>cn.com.likly.finalframework</groupId>
+                <groupId>com.ilikly.finalframework</groupId>
                 <artifactId>final-data</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>cn.com.likly.finalframework</groupId>
+                <groupId>com.ilikly.finalframework</groupId>
                 <artifactId>final-json</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>cn.com.likly.finalframework</groupId>
+                <groupId>com.ilikly.finalframework</groupId>
                 <artifactId>final-coding</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>cn.com.likly.finalframework</groupId>
+                <groupId>com.ilikly.finalframework</groupId>
                 <artifactId>final-spring</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>cn.com.likly.finalframework</groupId>
+                <groupId>com.ilikly.finalframework</groupId>
                 <artifactId>final-cache</artifactId>
                 <version>${project.version}</version>
             </dependency>
