--- a/final-test/src/main/resources/application.yml
+++ b/final-test/src/main/resources/application.yml
@@ -1,8 +1,10 @@
+
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/test?characterEncoding=utf8&verifyServerCertificate=false&useSSL=false&requireSSL=false
     username: root
     password: Aa000000
+    type: com.zaxxer.hikari.HikariDataSource
   redis:
     host: localhost
     port: 6379
@@ -38,3 +40,10 @@ logging:
                 mapper: debug
 server:
   port: 8080
+final:
+  data:
+    name-converter:
+      column-converter: com.ilikly.finalframework.data.mapping.converter.CameHump2UnderlineNameConverter
+      table-converter: com.ilikly.finalframework.data.mapping.converter.CameHump2UnderlineNameConverter
+  json:
+    json-service: com.ilikly.finalframework.json.jackson.JacksonJsonService
