--- a/final-redis/pom.xml
+++ b/final-redis/pom.xml
@@ -13,6 +13,16 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
             <groupId>com.ilikly.finalframework</groupId>
             <artifactId>final-core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
