[U] update README.md

--- a/final-test/src/main/resources/application.yml
+++ b/final-test/src/main/resources/application.yml
@@ -39,7 +39,7 @@ logging:
               dao:
                 mapper: debug
 server:
-  port: 8080
+  port:
 final:
   data:
     name-converter:
@@ -47,7 +47,3 @@ final:
       table-converter: com.ilikly.finalframework.data.mapping.converter.SimpleNameConverter
   json:
     json-service: com.ilikly.finalframework.json.jackson.JacksonJsonService
-  redis:
-    serializer:
-      key-serializer: com.ilikly.finalframework.redis.serializer.Object2StringRedisSerializer
-      value-serializer: org.springframework.data.redis.serializer.GenericJackson2JsonRedisSerializer
