--- a/final-data/pom.xml
+++ b/final-data/pom.xml
@@ -10,6 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>final-data</artifactId>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
