--- a/final-logging/pom.xml
+++ b/final-logging/pom.xml
@@ -17,6 +17,10 @@
             <artifactId>spring-boot-starter-logging</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.ilikly.finalframework</groupId>
+            <artifactId>final-data</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
