--- a/pom.xml
+++ b/pom.xml
@@ -36,8 +36,8 @@
     <properties>
         <final.release.version>0.0.1-SNAPSHOT</final.release.version>
         <spring.boot.version>2.1.1.RELEASE</spring.boot.version>
-        <spring-cloud.version>Greenwich.RC2</spring-cloud.version>
-        <!--<spring-cloud.version>Finchley.RELEASE</spring-cloud.version>-->
+        <!--<spring-cloud.version>Greenwich.RC2</spring-cloud.version>-->
+        <spring-cloud.version>Finchley.RELEASE</spring-cloud.version>
         <mybatis.version>3.4.6</mybatis.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
