--- a/final-coding/pom.xml
+++ b/final-coding/pom.xml
@@ -12,7 +12,6 @@
     <artifactId>final-coding</artifactId>
 
     <dependencies>
-
         <dependency>
             <groupId>com.google.auto.service</groupId>
             <artifactId>auto-service</artifactId>
@@ -26,26 +25,11 @@
         <dependency>
             <groupId>com.ilikly.finalframework</groupId>
             <artifactId>final-core</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.ilikly.finalframework</groupId>
-            <artifactId>final-data-annotation</artifactId>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.springframework.boot</groupId>
-                    <artifactId>spring-boot-starter-logging</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>ch.qos.logback</groupId>
-            <artifactId>logback-core</artifactId>
-            <version>1.2.3</version>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>2.1.0.RELEASE</version>
         </dependency>
     </dependencies>
 
