--- a/final-data/final-data-coding/pom.xml
+++ b/final-data/final-data-coding/pom.xml
@@ -18,7 +18,11 @@
         </dependency>
         <dependency>
             <groupId>com.ilikly.finalframework</groupId>
-            <artifactId>final-data-core</artifactId>
+            <artifactId>final-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.ilikly.finalframework</groupId>
+            <artifactId>final-data-annotation</artifactId>
         </dependency>
     </dependencies>
 
