--- a/final-json/pom.xml
+++ b/final-json/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>final-json-core</module>
         <module>final-json-spring-boot-starter</module>
+        <module>final-json-autoconfigure</module>
     </modules>
 
 
