--- a/final-test/src/main/resources/application.yml
+++ b/final-test/src/main/resources/application.yml
@@ -44,3 +44,4 @@ final:
     json-service: com.ilikly.finalframework.json.jackson.JacksonJsonService
   response:
     sync-status: false
+    interceptor: com.ilikly.finalframework.spring.web.reponse.DefaultResponseInterceptor
