--- a/final-json/final-json-jackson/pom.xml
+++ b/final-json/final-json-jackson/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>final-json</artifactId>
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>final-json-spring-boot-starter</artifactId>
+    <artifactId>final-json-jackson</artifactId>
 
     <dependencies>
         <dependency>
@@ -17,13 +17,14 @@
             <artifactId>final-json-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.ilikly.finalframework</groupId>
-            <artifactId>final-json-jackson</artifactId>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.ilikly.finalframework</groupId>
-            <artifactId>final-json-autoconfigure</artifactId>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
     </dependencies>
+
 
 </project>
