[U] add Criterion Annotation framework

--- a/final-spring/final-spring-core/pom.xml
+++ b/final-spring/final-spring-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>final-spring</artifactId>
         <groupId>com.ilikly.finalframework</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1.RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>com.ilikly.finalframework</groupId>
             <artifactId>final-spring-coding</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.1.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>com.ilikly.finalframework</groupId>
