--- a/final-data/final-data-autoconfigure/pom.xml
+++ b/final-data/final-data-autoconfigure/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>final-data</artifactId>
         <groupId>com.ilikly.finalframework</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1.RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>com.ilikly.finalframework</groupId>
             <artifactId>final-data-core</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.1.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>com.ilikly.finalframework</groupId>
