--- a/final-redis/final-redis-core/pom.xml
+++ b/final-redis/final-redis-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>final-redis</artifactId>
         <groupId>com.ilikly.finalframework</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1.RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -16,7 +16,7 @@
         <dependency>
             <groupId>com.ilikly.finalframework</groupId>
             <artifactId>final-core</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.1.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>com.ilikly.finalframework</groupId>
