--- a/final-test/pom.xml
+++ b/final-test/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>final-framework</artifactId>
         <groupId>com.ilikly.finalframework</groupId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>0.0.1.RELEASE</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -15,17 +15,17 @@
         <dependency>
             <groupId>com.ilikly.finalframework</groupId>
             <artifactId>final-spring-boot-starter</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.1.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>com.ilikly.finalframework</groupId>
             <artifactId>final-mybatis-spring-boot-starter</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.1.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>com.ilikly.finalframework</groupId>
             <artifactId>final-redis-spring-boot-starter</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.1.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>com.ilikly.finalframework</groupId>
@@ -38,7 +38,7 @@
         <dependency>
             <groupId>com.ilikly.finalframework</groupId>
             <artifactId>final-logging</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.1.RELEASE</version>
         </dependency>
     </dependencies>
 
