--- a/final-mybatis/final-mybatis-autoconfigure/pom.xml
+++ b/final-mybatis/final-mybatis-autoconfigure/pom.xml
@@ -35,5 +35,21 @@
             <artifactId>final-mybatis-agent</artifactId>
         </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
 
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
