--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,11 @@
             </dependency>
             <dependency>
                 <groupId>com.ilikly.finalframework</groupId>
+                <artifactId>final-cache-annotation</artifactId>
+                <version>${final.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.ilikly.finalframework</groupId>
                 <artifactId>final-cache-core</artifactId>
                 <version>${final.version}</version>
             </dependency>
