--- a/final-core/pom.xml
+++ b/final-core/pom.xml
@@ -12,10 +12,8 @@
     <artifactId>final-core</artifactId>
     <dependencies>
         <dependency>
-            <groupId>org.jetbrains</groupId>
-            <artifactId>annotations</artifactId>
-            <version>RELEASE</version>
-            <scope>compile</scope>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
