--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ after_script:
   - pwd
   - git add .
   - git commit -m "update"
-  - git push --force --quiet "https://${coding_user}:${coding_token}@${coding_repo}" master:master
+  - git push --force "https://${coding_user}:${coding_token}@${coding_repo}" master:master
 
 
 env:
